--- a/craciun/wheel_game/wheel.html
+++ b/craciun/wheel_game/wheel.html
@@ -54,6 +54,20 @@
     <audio id="spin-audio" src="../misc/spin.wav" preload="none"></audio>
   </div>
 
+  <!-- Debug/Admin Menu (temporary) -->
+  <button id="debug-btn" class="debug-btn" aria-label="Debug menu">404</button>
+
+  <div id="password-modal" class="password-modal hidden" role="dialog" aria-modal="true" aria-hidden="true">
+    <div class="password-inner">
+      <button id="close-password-btn" class="close-btn" aria-label="Close">✕</button>
+      <h2>Debug Access</h2>
+      <label for="password-input">Password:</label>
+      <input id="password-input" type="password" placeholder="Enter password" />
+      <button id="submit-password-btn" class="submit-btn">Enter</button>
+      <p id="password-error" class="error hidden"></p>
+    </div>
+  </div>
+
   <!-- snow.js must be loaded before wheel.js -->
   <script src="js/snow.js" defer></script>
   <script src="js/wheel.js" defer></script>
