--- a/1year/1year.html
+++ b/1year/1year.html
@@ -1,1 +1,29 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>1 Year With You 🤍</title>
+  <link rel="stylesheet" href="css/1year.css">
+</head>
+<body>
+  <main class="main-wrapper">
+    <h1 class="title-text">1 year with you 🤍</h1>
+    <div class="gift-center-area">
+      <button
+        class="gift-btn"
+        type="button"
+        aria-label="Open your anniversary gift"
+      >
+        🎁
+      </button>
+      <div class="emoji-container" aria-hidden="true"></div>
+    </div>
+    <div class="romantic-message" aria-live="polite" hidden>
+      <!-- The message gets revealed by JS -->
+    </div>
+  </main>
+  <script src="js/1year.js"></script>
+</body>
+</html>
