--- a/valentines/valentines.html
+++ b/valentines/valentines.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>My Hello Kitty Valentine</title>
   <link rel="stylesheet" href="css/valentines.css" />
 </head>
@@ -25,7 +25,38 @@
 
     <button id="loveBtn" class="love-btn" type="button">Click for a kiss 💗</button>
     <p id="loveNote" class="love-note" role="status" aria-live="polite"></p>
+
+    <section class="music-player" aria-label="Music player">
+      <p id="nowPlaying" class="now-playing">Now playing: #1</p>
+
+      <div class="player-controls">
+        <button id="prevBtn" type="button" class="ctrl-btn">Prev</button>
+        <button id="playPauseBtn" type="button" class="ctrl-btn ctrl-main">Play</button>
+        <button id="nextBtn" type="button" class="ctrl-btn">Next</button>
+      </div>
+
+      <div class="player-controls secondary-controls">
+        <button id="reshuffleBtn" type="button" class="ctrl-btn">Reshuffle</button>
+        <label class="track-picker-label" for="trackSelect">Track</label>
+        <select id="trackSelect" class="track-select" aria-label="Select track">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="10">10</option>
+          <option value="11">11</option>
+          <option value="12">12</option>
+        </select>
+      </div>
+    </section>
   </main>
+
+  <audio id="bgSong" loop="false" preload="metadata"></audio>
 
   <div id="heartField" class="heart-field" aria-hidden="true"></div>
 
