--- a/valentines/lock.html
+++ b/valentines/lock.html
@@ -110,8 +110,8 @@
       event.preventDefault();
       const value = input.value.trim();
 
-      if (value === "banana!") {
-        window.location.href = "yoyo2007.htm";
+      if (value === "baNNA!") {
+        window.location.href = "valentine-question.html";
         return;
       }
 
