--- a/valentines/valentine-question.html
+++ b/valentines/valentine-question.html
@@ -6,15 +6,17 @@
   <title>Will You Be My Valentine?</title>
   <style>
     :root {
-      --pink-1: #ffd6e8;
+      --pink-1: #ffd9ea;
       --pink-2: #ff9dc2;
       --pink-3: #ff4f89;
-      --green-1: #2fae61;
-      --green-2: #1e8a4a;
       --ink: #65203f;
+      --btn-size-w: 120px;
+      --btn-size-h: 48px;
     }
 
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
 
     body {
       margin: 0;
@@ -22,8 +24,8 @@
       font-family: "Trebuchet MS", "Comic Sans MS", sans-serif;
       color: var(--ink);
       background:
-        radial-gradient(circle at 18% 20%, rgba(255,255,255,0.34), transparent 36%),
-        radial-gradient(circle at 78% 8%, rgba(255,255,255,0.26), transparent 33%),
+        linear-gradient(rgba(255, 225, 239, 0.66), rgba(255, 182, 211, 0.66)),
+        url("images/background.png") center / cover no-repeat fixed,
         linear-gradient(165deg, #ffe1ef, #ffb6d3 60%, #ff89b6);
       display: grid;
       place-items: center;
@@ -33,12 +35,14 @@
 
     .panel {
       width: min(100%, 520px);
-      background: rgba(255, 250, 253, 0.94);
-      border: 3px solid var(--pink-2);
+      background: rgba(255, 250, 253, 0.44);
+      border: 2px solid rgba(255, 157, 194, 0.85);
       border-radius: 24px;
       padding: 1.1rem 1rem;
       text-align: center;
-      box-shadow: 0 18px 44px rgba(167, 30, 86, 0.22);
+      box-shadow: 0 18px 44px rgba(167, 30, 86, 0.2);
+      backdrop-filter: blur(5px);
+      -webkit-backdrop-filter: blur(5px);
     }
 
     h1 {
@@ -49,32 +53,41 @@
     }
 
     .sub {
-      margin: 0.55rem 0 1rem;
+      margin: 0.55rem 0 0.95rem;
       font-size: clamp(0.92rem, 3.9vw, 1rem);
       line-height: 1.45;
     }
 
-    .yes-wrap {
-      display: none;
-      margin-bottom: 0.85rem;
-      padding: 0.5rem;
+    .yes-zone {
+      display: grid;
+      justify-content: center;
+      margin-bottom: 0.8rem;
+      padding: 0.55rem;
       border-radius: 14px;
-      background: linear-gradient(180deg, #39c26f, #2a9f57);
+      background: rgba(255, 255, 255, 0.38);
+      border: 1px solid rgba(255, 160, 198, 0.62);
     }
 
-    .yes-wrap.show {
-      display: block;
+    .choice-btn {
+      width: var(--btn-size-w);
+      min-height: var(--btn-size-h);
+      border: 0;
+      border-radius: 999px;
+      font-weight: 700;
+      font-size: 1rem;
+      color: #fff;
+      cursor: pointer;
     }
 
     .yes-btn {
-      width: 100%;
-      min-height: 50px;
-      border: 0;
-      border-radius: 11px;
-      font-size: 1.08rem;
-      font-weight: 700;
-      color: #fff;
-      background: linear-gradient(180deg, var(--green-1), var(--green-2));
+      background: linear-gradient(180deg, #b8b8b8, #8c8c8c);
+      opacity: 0.88;
+      cursor: not-allowed;
+    }
+
+    .yes-btn.ready {
+      background: linear-gradient(180deg, #36bf6d, #239551);
+      opacity: 1;
       cursor: pointer;
     }
 
@@ -83,21 +96,14 @@
       left: 50%;
       top: 68%;
       transform: translate(-50%, -50%);
-      min-width: 88px;
-      min-height: 46px;
-      border: 0;
-      border-radius: 999px;
-      font-weight: 700;
-      color: #fff;
       background: linear-gradient(180deg, #ff7baa, #ff4f89);
       box-shadow: 0 8px 24px rgba(255, 79, 137, 0.34);
       z-index: 5;
-      cursor: pointer;
     }
 
     .status {
       margin: 0;
-      min-height: 1.2rem;
+      min-height: 1.25rem;
       font-weight: 700;
       color: #c02b61;
       font-size: 0.92rem;
@@ -110,40 +116,41 @@
       margin: 0;
       font-size: 0.78rem;
       color: #6a2144;
-      opacity: 0.8;
-      background: rgba(255,255,255,0.65);
+      opacity: 0.88;
+      background: rgba(255, 255, 255, 0.55);
       border: 1px solid rgba(255, 116, 169, 0.45);
       border-radius: 10px;
       padding: 0.32rem 0.5rem;
       z-index: 6;
+      backdrop-filter: blur(3px);
+      -webkit-backdrop-filter: blur(3px);
     }
   </style>
 </head>
 <body>
   <main class="panel">
     <h1>Will you be my valentine?</h1>
-    <p class="sub">One tiny test first... tap the NO button two times.</p>
+    <p class="sub">Tiny challenge first: catch NO five times.</p>
 
-    <div id="yesWrap" class="yes-wrap" aria-hidden="true">
-      <button id="yesBtn" class="yes-btn" type="button">YES 💚</button>
+    <div class="yes-zone">
+      <button id="yesBtn" class="choice-btn yes-btn" type="button" disabled>YES</button>
     </div>
 
-    <p id="statusText" class="status"></p>
+    <p id="statusText" class="status">NO taps: 0 / 5</p>
   </main>
 
-  <button id="noBtn" class="no-btn" type="button">NO</button>
-  <p class="hint">Hint: press NO two times</p>
+  <button id="noBtn" class="choice-btn no-btn" type="button">NO</button>
+  <p class="hint">Hint: NO moves every 2 seconds. Tap it 5 times.</p>
 
   <script>
     const noBtn = document.getElementById("noBtn");
-    const yesWrap = document.getElementById("yesWrap");
     const yesBtn = document.getElementById("yesBtn");
     const statusText = document.getElementById("statusText");
 
     let noCount = 0;
 
     function randomizeNoPosition() {
-      const pad = 10;
+      const pad = 12;
       const rect = noBtn.getBoundingClientRect();
       const maxX = Math.max(pad, window.innerWidth - rect.width - pad);
       const maxY = Math.max(pad, window.innerHeight - rect.height - pad);
@@ -155,25 +162,30 @@
       noBtn.style.transform = "none";
     }
 
+    function unlockYesIfReady() {
+      statusText.textContent = `NO taps: ${noCount} / 5`;
+
+      if (noCount >= 5) {
+        yesBtn.disabled = false;
+        yesBtn.classList.add("ready");
+        statusText.textContent = "Okay, YES is unlocked.";
+      }
+    }
+
     noBtn.addEventListener("click", () => {
       noCount += 1;
-
-      if (noCount < 2) {
-        statusText.textContent = "One more NO tap needed...";
-      } else {
-        statusText.textContent = "Okay, YES unlocked.";
-        yesWrap.classList.add("show");
-        yesWrap.setAttribute("aria-hidden", "false");
-      }
-
+      unlockYesIfReady();
       randomizeNoPosition();
     });
 
     yesBtn.addEventListener("click", () => {
+      if (yesBtn.disabled) {
+        return;
+      }
       window.location.href = "yoyo2007.htm";
     });
 
-    setInterval(randomizeNoPosition, 1000);
+    setInterval(randomizeNoPosition, 2000);
     window.addEventListener("resize", randomizeNoPosition);
   </script>
 </body>
