Add Kawaii Valentine arcade app
Add a self-contained Kawaii Valentine arcade (valentines/arcade.html, css/arcade.css, js/arcade.js) featuring a 90-question quiz with checkpoints/codes, timed hints/skip UI, localization (RO/EN), localStorage state persistence and event logging, and three password-locked mini-games (HeartCatch, LoveMaze, MemoryKiss) that unlock sequentially and lead to a credits screen. Also update driving-quiz.js to use a shuffled questionBank (avoid static global ordering) and add a local shuffle helper, and add a link from yoyo2007.htm to the new arcade page.

--- a/valentines/yoyo2007.htm
+++ b/valentines/yoyo2007.htm
@@ -25,6 +25,7 @@
 
     <button id="loveBtn" class="love-btn" type="button">Click for a kiss 💗</button>
     <p id="loveNote" class="love-note" role="status" aria-live="polite"></p>
+    <p class="love-note"><a href="arcade.html">Open Kawaii Arcade</a></p>
   </main>
 
   <button id="playerToggle" class="player-toggle" type="button" aria-controls="musicPanel" aria-expanded="false">Music ♪</button>
